--- a/_data/itgm6_communities.yml
+++ b/_data/itgm6_communities.yml
@@ -19,14 +19,16 @@
   #     work_place : "Total Objects / ALM Works"
   #     theme : "Как все устроено: обсуждаем жизненный цикл задач на примере TFS и Jira."
 
-# - title: IT HR
-#   link: /
-  # schedule:
-
-  #   "13:00" :
-  #     speaker : Эльвира Рябыкина
-  #     work_place : SEMrush
-  #     theme : "Мотивация сотрудников на обучение и развитие при плоской организационной структуре. Миф или реальность?"
+- title: SPb IT HR
+  id: 16
+  link: https://vk.com/spbithrteam
+  schedule:
+     "13:00" :
+       speaker : Мария Макарова
+       work_place : "-"
+       theme : "Откуда берутся плохие HR и куда их надо девать"
+       is_discussion: 1     
+       speaker_ava: nan.jpg        
   #   "14:00" :
   #     speaker : Лилия Смирнова
   #     work_place : "Корпоративный институт ОАО Газпром"
@@ -656,26 +658,26 @@
 - title: SPb e-Learning
   id: 14
   link: "https://www.linkedin.com/groups?home=&gid=8282289"
-  # schedule:
+  schedule:
 
-  #   "13:00" :
-  #     speaker : "Ольга Куранова"
-  #     work_place : "Центр дистанционного обучения ПГУПС"
-  #     theme : "Опыт массового обучения в распределенной компании и проблемы СДО в вузе"
-     #  is_discussion: 1     
-     #  speaker_ava: nan.jpg    
+     "13:00" :
+       speaker : "Лилия Смирнова"
+       work_place : "Корпоративный институт ПАО «Газпром»"
+       theme : "Искуственный интеллект и электронное обучение."
+       is_discussion: 0     
+       speaker_ava: nan.jpg    
   #   "14:00" :
   #     speaker : Андрей Замулин
   #     work_place : "Высшая школа менеджмента СПбГУ"
   #     theme : "Использование переговорного онлайн-тренажера «Roundy» в дистанционном обучении."
      #  is_discussion: 1     
      #  speaker_ava: nan.jpg    
-  #   "15:00" :
-  #     speaker : Лилия Смирнова
-  #     work_place : "Корпоративный институт ОАО Газпром"
-  #     theme : "Разработка интерактивных упражнений для электронных курсов."
-     #  is_discussion: 1     
-     #  speaker_ava: nan.jpg    
+     "15:00" :
+       speaker : Игорь Сазонов
+       work_place : "LMS-Tech"
+       theme : "Структура БД Moodle и особенности работы с Moodle Data API."
+       is_discussion: 0     
+       speaker_ava: nan.jpg    
   #   "16:00" :
   #     speaker : "Игорь Сазонов"
   #     work_place : 
