--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -58,11 +58,11 @@
 #   level: Серебряный партнер
 #   logo: da.png
 
-- title: IT-Grad
-  link: http://www.it-grad.ru/
+- title: SEMRush
+  link: http://www.semrush.com/
   desc: 
   level: Серебряный партнер
-  logo: itgrad.png
+  logo: semrush_2.png
 
 # - title: Luxoft
 #   link: https://www.luxoft.ru/
