--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -43,10 +43,10 @@
 #   desc: 
 #   logo: /itgm/assets/images/logos/itsob.png
 
- - title: Сын Программиста
-   link: https://vk.com/proger_baby
-   desc: 
-   logo: progson.png
+- title: "Сын Программиста"
+  link: https://vk.com/proger_baby
+  desc: 
+  logo: progson.png
 
 # - title: Haker
 #   link: https://xakep.ru/
