--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -88,6 +88,11 @@
   desc: 
   logo: businessportret.png
 
+- title: "Первый городской бизнес-инкубатор"
+  link: http://www.start-business.ru/
+  desc: 
+  logo: pgbi.jpg
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
