--- a/_data/itgm6_sponsors.yml
+++ b/_data/itgm6_sponsors.yml
@@ -64,6 +64,12 @@
   level: Серебряный партнер
   logo: semrush_2.png
 
+- title: Selectel
+  link: http://www.selectel.ru/
+  desc: 
+  level: Серебряный партнер
+  logo: selectel.png
+
 # - title: Luxoft
 #   link: https://www.luxoft.ru/
 #   desc: 
