ichar added as infopartner

--- a/_data/itgm6_infopartners.yml
+++ b/_data/itgm6_infopartners.yml
@@ -93,6 +93,11 @@
   desc: 
   logo: pgbi.jpg
 
+- title: "iChar"
+  link: http://ichar.ru/
+  desc: 
+  logo: ichar.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
